--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-SERVER_ADDRESS="8080"
+SERVER_ADDRESS=":8080"
 
-PSQL_HOST=localhost
-PSQL_PORT=5432
-PSQL_USER=avatar
-PSQL_PASSWORD=aang
-PSQL_DATABASE=airbender
-PSQL_SSLMODE=disable
+JWT_SECRET=
+
+PSQL_HOST=
+PSQL_PORT=
+PSQL_USER=
+PSQL_PASSWORD=
+PSQL_DATABASE=
+PSQL_SSLMODE=
